--- a/.github/workflows/EC2.yml
+++ b/.github/workflows/EC2.yml
@@ -37,5 +37,5 @@ jobs:
           export DBNAME=${{ secrets.DBNAME }}
           export DBPORT=${{ secrets.DBPORT }}
           export PORT=8000
-          chmod +x main
-          nohup ./main &
+          chmod +x main.exe
+          nohup ./main.exe &
