--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -60,3 +60,8 @@ jobs:
     needs: build
     uses: ./.github/workflows/EC2.yml
     secrets: inherit
+
+  # Deploy_ECS:
+    # needs: docker
+    # uses: ./.github/workflows/ECS.yml
+    # secrets: inherit
