--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -30,4 +30,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: bredimuliterno/go_ci:${{github.ref_name}}
+        tags: bredimuliterno/go_ci:${{github.run_number}}
