--- a/.github/workflows/ECS.yml
+++ b/.github/workflows/ECS.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         task-definition: task-definition.json
         container-name: Go
-        image: bredimuliterno/go_ci:main
+        image: bredimuliterno/go_ci:${{github.run_number}}
         environment-variables: |
           HOST=${{ secrets.DBHOST }}
           USER=${{ secrets.DBUSER }}
