--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -65,3 +65,9 @@ jobs:
     # needs: docker
     # uses: ./.github/workflows/ECS.yml
     # secrets: inherit
+    
+  LoadTest:
+    needs: docker
+    if: ${{ github.ref_name == 'HML' }}
+    uses: ./.github/workflows/LoadTest.yml
+    secrets: inherit
