Update go.yml Aula 22

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -65,6 +65,11 @@ jobs:
     # needs: docker
     # uses: ./.github/workflows/ECS.yml
     # secrets: inherit
+
+  # Deploy_EKS:
+    # needs: docker
+    # uses: ./.github/workflows/EKS.yml
+    # secrets: inherit
     
   LoadTest:
     needs: docker
